# MalgoLib

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/algorithms/: ModuleAlgorithms.h  ModuleAlgorithms.hpp
src/concepts/: DefaultTypes.hpp  Tensor.hpp
src/models/: BatchNormalization.hpp  Linear.hpp  Module.hpp  Shape.hpp
src/models/activations/: Linear.hpp
src/traits/: Tensor.hpp
test/: CMakeLists.txt  MainTestSpec.cpp  ModuleAlgorithmsSpec.cpp
